# bare-metal

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
