[package]
name = "bare-metal"
version = "0.1.1"
edition = "2024"

[dependencies]
bootloader = { version = "0.9.30", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.6"
x86_64 = "0.14.2"
uart_16550 = "0.3.2"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"
lazy_static = {version = "1.5", features = ["spin_no_std"]}
